add orientation in fragment 4

--- a/app/src/main/res/layout-land/fragment_cuarto_fragmento.xml
+++ b/app/src/main/res/layout-land/fragment_cuarto_fragmento.xml
@@ -11,52 +11,44 @@
         android:layout_height="match_parent"
         android:baselineAligned="false"
         android:divider="?android:attr/dividerHorizontal"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:weightSum="1"
-        android:padding="15dp"
-        android:showDividers="middle"
-        >
+        android:padding="10dp"
+        android:showDividers="middle">
 
         <fragment
-            android:id="@+id/fragmento1"
-            android:layout_width="match_parent"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
+            android:id="@+id/fragmento1"
             android:name="com.example.parcialpractice.SeptimoFragmento"
-            android:layout_weight="1"
-
             />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="600dp"
+            android:layout_width="600dp"
+            android:layout_height="395dp"
             android:baselineAligned="false"
-            android:divider="?android:attr/dividerVertical"
-            android:orientation="horizontal"
+            android:divider="?android:attr/dividerHorizontal"
+            android:orientation="vertical"
             android:weightSum="2"
             android:padding="10dp"
             android:showDividers="middle"
-
             >
 
             <fragment
-                android:id="@+id/fragmento2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:id="@+id/fragmento2"
                 android:layout_weight="1"
-                android:name="com.example.parcialpractice.OctavoFragmento"
-                />
+                android:name="com.example.parcialpractice.OctavoFragmento"/>
 
             <fragment
-                android:id="@+id/fragmento3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:id="@+id/fragmento3"
                 android:layout_weight="1"
-                android:name="com.example.parcialpractice.NovenoFragmento"
-                />
+                android:name="com.example.parcialpractice.NovenoFragmento"/>
 
         </LinearLayout>
-
-
 
     </LinearLayout>
 
